# cloudblocks

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  DOMAIN_MODEL.md  LICENSE  Makefile  NOTICE  PRD.md  README.md  ROADMAP.md  SECURITY.md  codecov.yml  docker-compose.dev.yml  docker-compose.yml  generate_svg.py  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  snapshot-builder.md  tsconfig.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  epic.yml  feature_request.yml  question.yml  user_story.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  pages.yml  preview.yml  promote.yml
.playwright-mcp/: page-2026-03-31T12-55-44-577Z.yml  page-2026-03-31T12-56-35-020Z.yml  page-2026-04-01T01-01-55-010Z.yml  page-2026-04-01T01-02-24-697Z.yml  page-2026-04-01T01-02-55-067Z.yml  page-2026-04-01T01-03-39-236Z.yml
.sisyphus/: ralph-loop.local.md
.sisyphus/plans/: 1509-multicloud-terraform.md  deploy-and-metrics-mvp.md
.sisyphus/run-continuation/: ses_2efdae552ffe2AB5gEQv96Wzk6.json
app/: package-lock.json  package.json
app/src/: App.css  App.tsx  index.css
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py
apps/api/app/api/routes/: __init__.py  ai.py  ai_keys.py  auth.py  generation.py  github.py  scenarios.py  session.py  workspaces.py
apps/api/app/application/: __init__.py
apps/api/app/application/use_cases/: __init__.py  ai_keys_use_cases.py  ai_use_cases.py  auth_use_cases.py  generation_use_cases.py  github_use_cases.py  session_use_cases.py  workspace_use_cases.py
apps/api/app/core/: __init__.py  config.py  dependencies.py  errors.py  security.py
apps/api/app/domain/: __init__.py
apps/api/app/domain/models/: __init__.py  ai_entities.py  entities.py  repositories.py
apps/api/app/engines/: __init__.py  architecture_normalizer.py  rule_engine.py  suggestions.py  validation.py
apps/api/app/engines/prompts/: architecture_prompt.py
apps/api/app/infrastructure/: __init__.py  github_service.py
apps/api/app/infrastructure/cache/: __init__.py  redis_client.py  redis_session_repo.py
apps/api/app/infrastructure/cost/: __init__.py  infracost_client.py
apps/api/app/infrastructure/db/: __init__.py  connection.py  pg_migrations.py  pg_repositories.py  repositories.py
apps/api/app/infrastructure/db/migrations/: 001_create_users.sql  002_create_workspaces.sql  003_create_ai_api_keys.sql  003_create_scenarios.sql  004_create_learning_progress.sql  005_create_deployments.sql
apps/api/app/infrastructure/llm/: __init__.py  client.py  key_manager.py
apps/api/app/infrastructure/providers/: __init__.py
apps/api/app/infrastructure/queue/: __init__.py
apps/api/app/infrastructure/storage/: __init__.py
apps/api/app/models/: __init__.py
apps/api/app/tests/: __init__.py  conftest.py  test_generated_models.py
apps/api/app/tests/helpers/: __init__.py  httpx.py
apps/api/app/tests/integration/: __init__.py  test_ai_e2e.py  test_ai_key_routes.py  test_ai_routes.py  test_auth_routes.py  test_generation_routes.py  test_github_routes.py  test_workspace_routes.py
apps/api/app/tests/unit/: __init__.py  test_ai_entities.py  test_ai_key_management.py  test_architecture_prompt.py  test_architecture_validator.py  test_auth_use_cases.py  test_config.py  test_connection.py  test_entities.py  test_errors.py  test_github_service.py  test_infracost_client.py  test_llm_client.py  test_main_health.py  test_pg_connection.py  test_pg_repositories.py  test_redis_client.py  test_redis_session.py  test_repositories.py  test_rule_engine.py  test_security.py  test_suggestions_engine.py  test_use_cases.py
apps/api/scripts/: check_schema_drift.py  generate_models.py
apps/web/: .env.example  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: API_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_GRAPH.md  ARCHITECTURE_REVIEW.md  DATABASE_ARCHITECTURE.md  DEPLOYMENT.md  DOMAIN_MODEL.md  DSL_SPEC.md  PRD.md  README.md  ROADMAP.md  SCENARIOS.md  STORAGE_ARCHITECTURE.md  TUTORIALS.md  VERSIONING.md  agent-playbook.md  contributing.md  deployment-guide.md  generator.md  model.md  provider.md  rules.md  templates.md
docs/adr/: 0001-architecture-model-as-source-of-truth.md  0002-git-native-storage.md  0003-lego-style-composition-model.md  0004-rule-engine-architecture.md  0005-2d-first-editor-with-25d-rendering.md  0006-graph-ir-evolution-approach.md  0007-multi-environment-deployment-strategy.md  0008-v2-universal-architecture-specification.md  0009-ai-assisted-architecture.md  0010-svg-only-rendering-model.md  0011-dual-theme-system.md  0012-modular-surface-visual-language.md  0013-block-unification.md  0014-promote-rollback-static-data.md  0015-external-actor-to-block-migration.md  0016-connection-type-taxonomy-alignment.md  0017-uniform-block-height.md  0018-canvas-improvement-strategy.md  README.md
docs/advanced/: backend-integrations.md  blank-canvas.md  code-generation.md
docs/api/: API_SPEC.md  BACKEND_ROLE.md
docs/audits/: m17-rendering-audit.md
docs/concept/: ACTION_PLAN_EXECUTION.md  ARCHITECTURE.md  ARCHITECTURE_0X_HISTORY.md  COMPATIBILITY.md  M16_DOCUMENTATION_ARCHITECTURE.md  M17_PRODUCT_STRUCTURE.md  M18_DEVOPS_UX.md  M19_MVP_POLISH_LAUNCH.md  M20_PARALLEL_EXECUTION.md  M20_UX_POLISH_GITHUB_HARDENING.md  M21_UI_UX_OVERHAUL_PHASES_12_18.md  PRD.md  PRODUCT_DIRECTION_SPEC.md  RESOURCE_CATEGORY_STRATEGY.md  ROADMAP.md  ROADMAP_0X_HISTORY.md  UI_FLOW.md  V1_PRODUCT_CONTRACT.md
docs/design/: ANALYTICS_INSTRUMENTATION_PLAN.md  BRICK_CONNECTOR_SPEC.md  BRICK_DESIGN_SPEC.md  BRICK_GUIDEBOOK.md  BRICK_SIZE_SPEC.md  CLOUDBLOCKS_SPEC_V2.md  CONNECTION_SPEC.md  DOC_CONSISTENCY_AUDIT_2026-03-19.md  ENDPOINT_PORT_MODEL.md  GRAPH_IR_SPEC.md  KPI_SCORECARD.md  LEARNING_MODE_SPEC.md  M17_API_CONTRACT.md  (+18 more)
scripts/: check-build-secrets.sh  check-versions.sh  gen-plates.cjs
(+600 files in other folders)
