[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudblocks-api"
version = "0.1.0"
description = "CloudBlocks Platform - Backend API"
readme = "apps/api/README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "yeongseon"}]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["apps/api"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
