[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudblocks"
version = "0.11.0"
description = "Visual cloud learning tool for beginners — guided templates, architecture patterns, and Terraform starter export"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "yeongseon"}]
keywords = ["cloud-architecture", "learning-tool", "terraform", "infrastructure-as-code", "visual-builder", "beginners"]

[project.urls]
Homepage = "https://github.com/yeongseon/cloudblocks"
Repository = "https://github.com/yeongseon/cloudblocks"
Issues = "https://github.com/yeongseon/cloudblocks/issues"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["apps/api"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
