[project]
name = "cloudblocks-api"
version = "0.53.0"
description = "CloudBlocks API — optional backend for auth, GitHub sync, and learning tool integrations"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "yeongseon"}]
keywords = ["cloud-architecture", "learning-tool", "fastapi", "infrastructure-as-code"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "PyJWT>=2.8.0",
    "httpx>=0.28.1",
    "cryptography>=42.0.0",
    "redis[hiredis]>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/yeongseon/cloudblocks"
Repository = "https://github.com/yeongseon/cloudblocks"
Issues = "https://github.com/yeongseon/cloudblocks/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.1",
    "datamodel-code-generator>=0.25.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/models/generated/architecture_model.py" = ["E501", "N815"]

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*", "app/__pycache__/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
